lib/tests/fixtures/compiler/parser/unreachable.baseline
Error: unreachable.pp:3:5: code is unreachable due to previous control flow statement.
  notice unreachable
  ^~~~~~~~~~~~~~~~~~
