lib/tests/fixtures/compiler/parser/unreachable.pp
[].each |$x| {
    break
    notice unreachable
}
